--- a/Notebook and BONUS - Data Aug/50_039_Group20.ipynb
+++ b/Notebook and BONUS - Data Aug/50_039_Group20.ipynb
@@ -4785,12 +4785,12 @@
    "source": [
     "### Loading Of Model ###\n",
     "# Load normal model\n",
-    "normal_model = load_model('group20-normal-final.pt')\n",
+    "normal_model = load_model('Best_Models/group20-normal-final.pt')\n",
     "# # Retrain loaded Model\n",
     "# normal_model = train(EPOCH, labels_dict, train_loader, val_loader, normal_model, LR, DEVICE, modelType = \"normal\" )\n",
     "\n",
     "# Load infected model\n",
-    "infected_model = load_model('group20-infected-final.pt')\n",
+    "infected_model = load_model('Best_Models/group20-infected-final.pt')\n",
     "# # Retrain loaded model\n",
     "# infected_model = train(EPOCH, labels_dict_infected , train_loader2, val_loader2, model, LR, DEVICE, modelType = \"infected\")"
    ]
@@ -5818,10 +5818,10 @@
    "source": [
     "### Loading Of Model ###\n",
     "# Load normal model\n",
-    "normal_model = load_model('group20-normal(aug)-final.pt')\n",
+    "normal_model = load_model('Best_Models/group20-normal(aug)-final.pt')\n",
     "\n",
     "# # Load infected model\n",
-    "infected_model = load_model('group20-infected(aug)-final.pt')"
+    "infected_model = load_model('Best_Models/group20-infected(aug)-final.pt')"
    ]
   },
   {
